--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </title>
 <h1>THARAMANI</h1>
 <P>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnEZ0xWQ-V3EUduDO3ShGKKKY2fPCjHW-iWA&s" alt="kaithi no.120">
+    <a href="https://suryakrishnan1908.github.io/liberty/ind.html" img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnEZ0xWQ-V3EUduDO3ShGKKKY2fPCjHW-iWA&s" alt="kaithi no.120">
 .</P>
 <p>rolex avan peru dilli</p>
 <P>O</P>
