--- a/ind.html
+++ b/ind.html
@@ -1,7 +1,117 @@
-<html>
-    <title>FLAT</title>
-    <h1>
-        FLAT EARTH
-    </h1>
-    <img src="https://m.media-amazon.com/images/I/91dvJ7hanLL.jpg" alt="flat earth">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        .main-header, .main-footer {
+            background: #333;
+            color: #fff;
+            padding: 20px 0;
+            text-align: center;
+        }
+        .main-header h1, .main-footer p {
+            margin: 0;
+        }
+        .content {
+            background: #fff;
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            color: #333;
+            border-bottom: 2px solid #333;
+            padding-bottom: 10px;
+        }
+        .contact-info, .skills, .education, .experience {
+            margin-bottom: 20px;
+        }
+        .contact-info ul, .skills ul, .education ul, .experience ul {
+            list-style: none;
+            padding: 0;
+        }
+        .contact-info li, .skills li, .education li, .experience li {
+            margin-bottom: 10px;
+        }
+    </style>
+</head>
+<body>
+
+    <header class="main-header">
+        <h1>John Doe</h1>
+        <p>Web Developer</p>
+    </header>
+
+    <div class="container">
+        <div class="content contact-info">
+            <h2>Contact Information</h2>
+            <ul>
+                <li>Email: john.doe@example.com</li>
+                <li>Phone: (123) 456-7890</li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/johndoe">linkedin.com/in/johndoe</a></li>
+                <li>Website: <a href="https://www.johndoe.com">www.johndoe.com</a></li>
+            </ul>
+        </div>
+
+        <div class="content summary">
+            <h2>Summary</h2>
+            <p>Experienced web developer with a strong background in front-end and back-end development. Proficient in HTML, CSS, JavaScript, and various web development frameworks. Adept at problem-solving and committed to delivering high-quality work.</p>
+        </div>
+
+        <div class="content experience">
+            <h2>Work Experience</h2>
+            <ul>
+                <li>
+                    <h3>Senior Web Developer - ABC Corp</h3>
+                    <p>January 2020 - Present</p>
+                    <p>Responsibilities include developing and maintaining the company website, optimizing web applications for maximum speed, and collaborating with designers to create user-friendly web pages.</p>
+                </li>
+                <li>
+                    <h3>Web Developer - XYZ Ltd</h3>
+                    <p>June 2015 - December 2019</p>
+                    <p>Worked on various web development projects, created and maintained websites, and provided technical support for web applications.</p>
+                </li>
+            </ul>
+        </div>
+
+        <div class="content education">
+            <h2>Education</h2>
+            <ul>
+                <li>
+                    <h3>Bachelor of Science in Computer Science - University of Somewhere</h3>
+                    <p>Graduated: May 2015</p>
+                </li>
+            </ul>
+        </div>
+
+        <div class="content skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>HTML, CSS, JavaScript</li>
+                <li>React, Angular, Vue.js</li>
+                <li>Node.js, Express</li>
+                <li>SQL, NoSQL</li>
+                <li>Git, GitHub</li>
+            </ul>
+        </div>
+    </div>
+
+    <footer class="main-footer">
+        <p>&copy; 2024 John Doe. All rights reserved.</p>
+    </footer>
+
+</body>
 </html>
