--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <title>
-    KHALI
+    resume
 </title>
-<h1>THARAMANI</h1>
+<h1>RESUME</h1>
 <P>
-    <a href="https://suryakrishnan1908.github.io/liberty/ind.html" img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnEZ0xWQ-V3EUduDO3ShGKKKY2fPCjHW-iWA&s" alt="kaithi no.120">
-.</P>
-<p>rolex avan peru dilli</p>
-<P>O</P>
+    <a href="https://suryakrishnan1908.github.io/liberty/ind.html">
+
+    <img src="https://st4.depositphotos.com/37746600/39914/v/450/depositphotos_399145536-stock-illustration-illustration-vector-graphic-touch-screen.jpg" alt="kaithi no.120">
+    </a>
+</P>
