--- a/ind.html
+++ b/ind.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <img src="C:\Users\surya\Downloads\White Simple Experience Resume.jpg">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRlwXMKsG4_wlmlsOLkL7juxmJiw86IF8u7pw&s">
     </head>
 </html>
