--- a/ind.html
+++ b/ind.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRlwXMKsG4_wlmlsOLkL7juxmJiw86IF8u7pw&s">
+        <img src="https://media.licdn.com/dms/image/D4D12AQEaTK5_cv5Fmg/article-cover_image-shrink_720_1280/0/1677082453584?e=2147483647&v=beta&t=hy4wcIl2vOpp5lr5k74obYVN63IT-U4lydNOIo3hHGo">
     </head>
 </html>
