--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
     resume
 </title>
 <h1>RESUME</h1>
+<p>
+    </head>
+<body>
+ 
+    <form>
+        
+        <p><b>Programming Languages Known</b></p>
+        <ul>
+            <li>C++</li>
+            <li>Java</li>
+            <li>Mern</li>
+        </ul>
+    </form>
+</body>
+</html>
+
+</p>
 <P>
-    <a href="https://suryakrishnan1908.github.io/liberty/ind.html">
+    <a href="file:///C:/Users/surya/OneDrive/Documents/hazel/nuts/ind.html">
 
     <img src="https://st4.depositphotos.com/37746600/39914/v/450/depositphotos_399145536-stock-illustration-illustration-vector-graphic-touch-screen.jpg" alt="kaithi no.120">
     </a>
