--- a/ind.html
+++ b/ind.html
@@ -1,6 +1,109 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <img src="https://media.licdn.com/dms/image/D4D12AQEaTK5_cv5Fmg/article-cover_image-shrink_720_1280/0/1677082453584?e=2147483647&v=beta&t=hy4wcIl2vOpp5lr5k74obYVN63IT-U4lydNOIo3hHGo">
+
+        <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2, h3 {
+            border-bottom: 2px solid #ddd;
+            padding-bottom: 10px;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .section:last-child {
+            margin-bottom: 0;
+        }
+        .contact-info {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .contact-info h1 {
+            margin: 0;
+        }
+        .contact-info p {
+            margin: 5px 0;
+        }
+        .skills, .education, .experience {
+            display: flex;
+            justify-content: space-between;
+        }
+        .skills ul, .education ul, .experience ul {
+            list-style: none;
+            padding: 0;
+        }
+        .skills ul li, .education ul li, .experience ul li {
+            margin-bottom: 10px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="contact-info">
+            <h1>John Doe</h1>
+            <p>Email: john.doe@example.com | Phone: (123) 456-7890</p>
+            <p>LinkedIn: linkedin.com/in/johndoe | GitHub: github.com/johndoe</p>
+        </div>
+        <div class="section">
+            <h2>Summary</h2>
+            <p>Experienced professional with a background in software development, specializing in web technologies. Proven ability to lead projects and deliver high-quality software solutions.</p>
+        </div>
+        <div class="section skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>JavaScript</li>
+                <li>HTML & CSS</li>
+                <li>React</li>
+                <li>Node.js</li>
+                <li>Python</li>
+                <li>SQL</li>
+            </ul>
+        </div>
+        <div class="section education">
+            <h2>Education</h2>
+            <ul>
+                <li>
+                    <h3>Bachelor of Science in Computer Science</h3>
+                    <p>University of Example - Graduated: 2020</p>
+                </li>
+            </ul>
+        </div>
+        <div class="section experience">
+            <h2>Experience</h2>
+            <ul>
+                <li>
+                    <h3>Software Developer</h3>
+                    <p>XYZ Company | Jan 2021 - Present</p>
+                    <p>Developed web applications using JavaScript, React, and Node.js. Collaborated with cross-functional teams to deliver high-quality software products.</p>
+                </li>
+                <li>
+                    <h3>Intern</h3>
+                    <p>ABC Corporation | Jun 2020 - Dec 2020</p>
+                    <p>Assisted in the development of web applications and gained hands-on experience with various web technologies.</p>
+                </li>
+            </ul>
+        </div>
+    </div>
+</body>
+</html>
+
     </head>
 </html>
