--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </p>
 <P>
-    <a href="https://suryakrishnan1908.github.io/liberty/ind.html">
+    <a href="https://suryakrishnan1908.github.io/liberty/img.jpg">
 
     <img src="https://st4.depositphotos.com/37746600/39914/v/450/depositphotos_399145536-stock-illustration-illustration-vector-graphic-touch-screen.jpg" alt="kaithi no.120">
     </a>
