--- a/index.html
+++ b/index.html
@@ -2,27 +2,77 @@
 <title>
     resume
 </title>
-<h1>RESUME</h1>
-<p>
-    </head>
+<html>
+<head>
+<style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
+</head>
 <body>
- 
-    <form>
+
+
+
+    <CENTER>
+        <H2>NAME : SURYA KRISHNAN M</H2>
+        <H2>DOB :  03/09/2004</H2>
+
+
+        <P>
+            <a href="https://suryakrishnan1908.github.io/liberty/img.jpg">
         
-        <p><b>Programming Languages Known</b></p>
-        <ul>
-            <li>C++</li>
-            <li>Java</li>
-            <li>Mern</li>
-        </ul>
-    </form>
+            <img src="https://img.freepik.com/premium-vector/account-icon-user-icon-vector-graphics_292645-552.jpg" alt="kaithi no.120">
+            </a>
+        </P>
+
+    </CENTER>
+
+<h2>EDUCATION</h2>
+
+<table>
+  <tr>
+    <th>SCHOOL</th>
+    <tr>
+        <td>SVVMHS</td>
+      </tr>
+      <th>PASSED OUT IN</th>
+      <TR>
+        <TD>2022</TD></TR>
+
+
+
+      <TR>
+    <th>COLLEGE</th>
+    <tr>
+        <td>SKCET</td>
+        
+      </tr></TR>
+    <th>PASSED OUT IN</th>
+  </tr>
+  
+  <tr>
+    <td> 2026</td>    
+  </tr>
+
+
+</table>
+
 </body>
-</html>
+
 
 </p>
-<P>
-    <a href="https://suryakrishnan1908.github.io/liberty/img.jpg">
 
-    <img src="https://st4.depositphotos.com/37746600/39914/v/450/depositphotos_399145536-stock-illustration-illustration-vector-graphic-touch-screen.jpg" alt="kaithi no.120">
-    </a>
-</P>
+</html>
