--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <html>
 <head>
 <style>
+
+
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
@@ -34,13 +36,13 @@ tr:nth-child(even) {
         <P>
             <a href="https://suryakrishnan1908.github.io/liberty/img.jpg">
         
-            <img src="https://img.freepik.com/premium-vector/account-icon-user-icon-vector-graphics_292645-552.jpg" alt="kaithi no.120">
+            <img src="https://img.freepik.com/premium-vector/account-icon-user-icon-vector-graphics_292645-552.jpg" height="200cm" width="200cm">
             </a>
         </P>
 
+        <h2>EDUCATION</h2>
     </CENTER>
 
-<h2>EDUCATION</h2>
 
 <table>
   <tr>
@@ -51,8 +53,6 @@ tr:nth-child(even) {
       <th>PASSED OUT IN</th>
       <TR>
         <TD>2022</TD></TR>
-
-
 
       <TR>
     <th>COLLEGE</th>
@@ -70,9 +70,12 @@ tr:nth-child(even) {
 
 </table>
 
+
+<center>
+    <h3>YOUTUBE CHANNEL</h3>
+    <a href="https://youtube.com/@lucidcreation1908?si=wkfjuZKHkxVGiJan">
+    <img src="https://yt3.googleusercontent.com/ccPr80rfkOgsE0TMP8S8vEfP85gl12XzUGtySPFFYNMhxlQ62W7ijksmUIXv6fCBC1jBmoEqaA=s900-c-k-c0x00ffffff-no-rj" height="50cm" width="50cm">
+</a>
+</center>
 </body>
-
-
-</p>
-
 </html>
