--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@ tr:nth-child(even) {
       <TR>
     <th>COLLEGE</th>
     <tr>
-        <td>SKCET</td>
+       <td> <a href="https://skcet.ac.in/">
+        SKCET
+        </a>
+    </td>
         
       </tr></TR>
     <th>PASSED OUT IN</th>
