--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
-<head>
-  <link rel="stylesheet" href="box.css">
-</head>
-
+<head><link rel="stylesheet" href="box.css" ></head>
 <body>
 
 <CENTER>
@@ -32,7 +27,7 @@
         <h2>EDUCATION</h2>
     </CENTER>
 
-
+<center>
 <table>
   <tr>
     <th>SCHOOL</th>
@@ -61,7 +56,7 @@
 
 
 </table>
-
+</center>
 
 <center>
     <h3>YOUTUBE CHANNEL</h3>
