--- a/port.html
+++ b/port.html
@@ -2,10 +2,46 @@
 <html>
     <head>
 <link rel="stylesheet" href="portfolio.css">
+
     </head>
     <body>
-<div class="img">
+<div class="user">
+    <img src="https://cdn-icons-png.flaticon.com/512/9131/9131529.png">
     
 </div>
+<div class="top">
+    <p>.</p>
+
+    <a href="https://suryakrishnan1908.github.io/liberty/about.html">
+    <div class="about">
+        <h3>ABOUT</h3>
+        
+    </div>
+</a>
+
+<a href="https://suryakrishnan1908.github.io/liberty/education.html">
+    <div class="education">
+        <h3>EDUCATION</h3>
+    </div>
+</a>
+
+<div class="work">
+    <h3>EDITING WORKS</h3>
+    <div class="work-content">
+        <a href="https://youtu.be/WtA-djVVr68?si=Y8OBXpvr6fZ6RvrJ">
+    <H5>SATRANGA-DEAR COMRADE</H5>
+    </div>
+</a>
+    <div class="work-content">
+        <H5>THEAN SUDARE-UYIRE</H5>
+        </div>
+  </div>
+
+
+
+</div>
+
+
+
     </body>
 </html>
