--- a/po.html
+++ b/po.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="intro">
-        <div><img src="C:\Users\surya\OneDrive\Desktop\html\id photo.jpg" alt="photo" height="250px"></div>
+        <div><img src="https://suryakrishnan1908.github.io/liberty/user.jpg" alt="photo" height="250px"></div>
     </div>
 
     <div class="name">
