--- a/po.html
+++ b/po.html
@@ -11,7 +11,7 @@
         <a href="" ><button>HOME</button></a>
         <a href="#about"><button>ABOUT</button></a>
         <a href="#edu"><button>EDUCATION</button></a>
-        <a><button>WORKS</button></a>
+        <a href="https://suryakrishnan1908.github.io/liberty/img.jpg"><button>RESUME</button></a>
     </div>
 
     <div class="intro">
