--- a/po.html
+++ b/po.html
@@ -12,6 +12,7 @@
         <a href="#about"><button>ABOUT</button></a>
         <a href="#edu"><button>EDUCATION</button></a>
         <a href="https://suryakrishnan1908.github.io/liberty/img.jpg"><button>RESUME</button></a>
+        <a href="https://youtube.com/@lucidcreation1908?si=wkfjuZKHkxVGiJan"><button>YOUTUBE</button></a>
     </div>
 
     <div class="intro">
