--- a/po.html
+++ b/po.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
+<title>
+    PORTFOLIO
+</title>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+       
+            <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="style.css">        
     </head>
     <body>
 
@@ -20,7 +25,7 @@
     </div>
 
     <div class="name">
-        <p>HI I'M SURYA KRISHNAN</p>
+        <p>Hi I'm Surya Krishnan</p>
 
     </div>
 
@@ -57,7 +62,7 @@
 <div class="edu" id="edu">
 
 <div class="qualification">
-    <h3>qualification</h3>
+    <h3>QUALIFICATION</h3>
 
 </div>
 <div class="school">
