--- a/po.html
+++ b/po.html
@@ -10,10 +10,10 @@
     </head>
     <body>
 
-<div class="total">
+<div class="total" id="tot">
 
     <div class="top">
-        <a href="" ><button>HOME</button></a>
+        <a href="#top" ><button>HOME</button></a>
         <a href="#about"><button>ABOUT</button></a>
         <a href="#edu"><button>EDUCATION</button></a>
         <a href="https://suryakrishnan1908.github.io/liberty/img.jpg"><button>RESUME</button></a>
