--- a/po.html
+++ b/po.html
@@ -50,7 +50,7 @@
 
     <div class="edit">
     <ul>
-        <li>I personally capcut for video editing as it has more features and transitions
+        <li>I personally capcut for video editing
         </li>
         <li>Adobe  Fresco for digital paintings</li>
     </ul>
