--- a/po.html
+++ b/po.html
@@ -1,89 +1,83 @@
 <!DOCTYPE html>
-<title>
-    PORTFOLIO
-</title>
 <html>
     <head>
-       
-            <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="style.css">        
+        <title>PORTFOLIO</title>
+        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 
-<div class="total" id="tot">
+        <div class="total" id="tot">
+            <div class="top">
+                <a href="#top"><button>HOME</button></a>
+                <a href="#about"><button>ABOUT</button></a>
+                <a href="#edu"><button>EDUCATION</button></a>
+                <a href="https://suryakrishnan1908.github.io/liberty/img.jpg"><button>RESUME</button></a>
+                <a href="https://youtube.com/@lucidcreation1908?si=wkfjuZKHkxVGiJan"><button>YOUTUBE</button></a>
+                <a href="#contact"><button>CONTACT</button></a>
+            </div>
 
-    <div class="top">
-        <a href="#top" ><button>HOME</button></a>
-        <a href="#about"><button>ABOUT</button></a>
-        <a href="#edu"><button>EDUCATION</button></a>
-        <a href="https://suryakrishnan1908.github.io/liberty/img.jpg"><button>RESUME</button></a>
-        <a href="https://youtube.com/@lucidcreation1908?si=wkfjuZKHkxVGiJan"><button>YOUTUBE</button></a>
-    </div>
+            <div class="intro">
+                <a href="#about">
+                    <div><img src="https://suryakrishnan1908.github.io/liberty/user.jpg" alt="photo" height="250px"></div>
+                </a>
+            </div>
 
-    <div class="intro">
-        <div><img src="https://suryakrishnan1908.github.io/liberty/user.jpg" alt="photo" height="250px"></div>
-    </div>
+            <div class="name">
+                <p>Hi I'm Surya Krishnan</p>
+            </div>
+        </div>
 
-    <div class="name">
-        <p>Hi I'm Surya Krishnan</p>
+        <div class="about" id="about">
+            <div class="who">
+                <p>ABOUT MYSELF</p>
+            </div>
+            <div class="interst">
+                <h4>Hi, I’m Surya Krishnan, a digital artist and electronic engineer. With a passion for both creativity and technology, I’ve carved out a unique niche where these two worlds intersect. As a digital illustrator and video editor, I produce intricate mashup videos of movies for my YouTube channel, blending elements from various films to create fresh and exciting narratives. My expertise in tools like Adobe Creative Suite and Final Cut Pro allows me to bring these visions to life with precision and flair.
+                    On the engineering front, my background in electronics has provided me with a deep understanding of PLCs, sensors, and other key components. I’ve had the opportunity to gain hands-on experience with these technologies, particularly during my inplant training at Sudharshanam Fabrics. This technical knowledge not only complements my artistic endeavors but also enables me to explore innovative ways to integrate electronics into my creative projects, such as interactive installations and sensor-based artworks.</h4>
+            </div>
+            <div class="hobby">
+                <h3>TOOLS I USE</h3>
+            </div>
+            <div class="edit">
+                <ul>
+                    <li>I personally use CapCut for video editing</li>
+                    <li>Adobe Fresco for digital paintings</li>
+                </ul>
+            </div>
+        </div>
 
-    </div>
+        <div class="edu" id="edu">
+            <div class="qualification">
+                <h3>QUALIFICATION</h3>
+            </div>
+            <div class="school">
+                <h1>SCHOOL</h1>
+            </div>
+            <div class="aboutschool">
+                <h4>I completed my schooling at a local high school where I developed a strong foundation in science and mathematics. These subjects piqued my interest in electronics and technology, leading me to pursue a career in electronic engineering. Additionally, I participated in various extracurricular activities such as art clubs and tech clubs, which helped me nurture my creative and technical skills.</h4>
+            </div>
+            <div class="college">
+                <h1>COLLEGE</h1>
+            </div>
+            <div class="aboutcollege">
+                <h4>During my college years, I pursued a degree in electronic engineering, which was an exciting and transformative period of my life. I attended a university known for its strong engineering program and vibrant campus life. I was deeply engaged in my coursework, focusing on subjects like digital electronics, microcontrollers, PLCs, and sensors. The rigorous academic environment helped me develop a solid understanding of these areas. I also had the opportunity to work on several projects and labs that provided hands-on experience with real-world applications of electronic engineering principles.</h4>
+            </div>
+        </div>
 
-    
-</div>
+        <div class="contact" id="contact">
+            <div class="contact-header">
+                <h3>CONTACTS</h3>
+            </div>
+            <div class="contact-links">
+                <a href="https://www.instagram.com/lucidcreation_1908?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" height="50px">
+                </a>
+                <a href="https://github.com/suryakrishnan1908/liberty" target="_blank">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub" height="50px">
+                </a>
+            </div>
+        </div>
 
-<div class="about" id="about">
-
-    <div class="who">
-        <p>ABOUT MYSELF</p>
-    </div>
-
-    <div class="interst">
-        <h4>Hi, I’m Surya Krishnan, a digital artist and electronic engineer. With a passion for both creativity and technology, I’ve carved out a unique niche where these two worlds intersect. As a digital illustrator and video editor, I produce intricate mashup videos of movies for my YouTube channel, blending elements from various films to create fresh and exciting narratives. My expertise in tools like Adobe Creative Suite and Final Cut Pro allows me to bring these visions to life with precision and flair.
-
-            On the engineering front, my background in electronics has provided me with a deep understanding of PLCs, sensors, and other key components. I’ve had the opportunity to gain hands-on experience with these technologies, particularly during my inplant training at Sudharshanam Fabrics. This technical knowledge not only complements my artistic endeavors but also enables me to explore innovative ways to integrate electronics into my creative projects, such as interactive installations and sensor-based artworks.</h4>
-    </div>
-
-    <div class="hobby">
-        <h3>TOOLS I USE</h3>
-    </div>
-
-    <div class="edit">
-    <ul>
-        <li>I personally capcut for video editing
-        </li>
-        <li>Adobe  Fresco for digital paintings</li>
-    </ul>
-    </div>
-</div>
-
-
-
-<div class="edu" id="edu">
-
-<div class="qualification">
-    <h3>QUALIFICATION</h3>
-
-</div>
-<div class="school">
-    <h1>SCHOOL</h1>
-</div>
-
-<div class="aboutschool">
-    <h4>I completed my schooling at a local high school where I developed a strong foundation in science and mathematics. These subjects piqued 
-        my interest in electronics and technology, leading me to pursue a career in electronic engineering. Additionally, I participated in various extracurricular activities such as art clubs and tech clubs, which helped me nurture my creative and technical skills.</h4>
-</div>
-
-<div class="college">
-    <h1>COLLEGE</h1>
-</div>
-
-<div class="aboutcollege">
-    <h4>During my college years, I pursued a degree in electronic engineering, which was an exciting and transformative period of my life. I attended a university known for its strong engineering program and vibrant campus life.
-        I was deeply engaged in my coursework, focusing on subjects like digital electronics, microcontrollers, PLCs, and sensors. The rigorous academic environment helped me develop a solid understanding of these areas. I also had the opportunity to work on several projects and labs that provided hands-on experience with real-world applications of electronic engineering principles.
-    </h4>
-</div>
-
-</div>
     </body>
 </html>
